--- a/avcb/index.html
+++ b/avcb/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_9.jpeg" alt="Equipe RW Mamedio instalando sistema de incêndio" loading="lazy">
+            <img src="./avcb.jpg" alt="Equipe RW Mamedio instalando sistema de incêndio" loading="lazy">
             <figcaption>Instalação e teste de sistemas de combate a incêndio.</figcaption>
           </figure>
         </div>
