--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="assets/img/pisos_granilite/job_13.jpeg" alt="Equipe RW Mamedio apresentando projeto arquitetônico" loading="lazy">
+                  <img src="projetos-arquitetonicos/img/projeto_central.png" alt="Equipe RW Mamedio apresentando projeto arquitetônico" loading="lazy">
                   <figcaption>Modelagem BIM com integração multidisciplinar.</figcaption>
                 </figure>
               </div>
@@ -121,7 +121,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="assets/img/pisos_granilite/job_12.jpeg" alt="Equipe RW Mamedio executando obra corporativa" loading="lazy">
+                  <img src="construcao-reforma/img/reforma.jpeg" alt="Equipe RW Mamedio executando obra corporativa" loading="lazy">
                   <figcaption>Obra RW com logística e segurança monitoradas.</figcaption>
                 </figure>
               </div>
@@ -145,7 +145,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="assets/img/pisos_granilite/job_7.jpeg" alt="Piso granilite executado pela RW Mamedio" loading="lazy">
+                  <img src="piso-granilite/img/job_14.jpeg?v=1" alt="Piso granilite executado pela RW Mamedio" loading="lazy">
                   <figcaption>Granilite vermelho com inserções metálicas premium.</figcaption>
                 </figure>
               </div>
@@ -169,8 +169,8 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="assets/img/pisos_granilite/job_1.jpeg" alt="Equipe RW Mamedio analisando documentação de imóveis" loading="lazy">
-                  <figcaption>Regularização imobiliária com matriz de riscos.</figcaption>
+                  <img src="regularizacao-imoveis/img/contratos.png" alt="Equipe RW Mamedio revisando contratos e documentação imobiliária" loading="lazy">
+                  <figcaption>Revisão de contratos, licenças e protocolos para regularização.</figcaption>
                 </figure>
               </div>
             </div>
