--- a/interiores/index.html
+++ b/interiores/index.html
@@ -88,8 +88,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_2.jpeg" alt="Projeto de interiores RW Mamedio com granilite e marcenaria sob medida" loading="lazy">
-            <figcaption>Living integrado com marcenaria e piso granilite RW.</figcaption>
+            <img src="./img/job_9.jpeg" alt="Projeto de interiores RW Mamedio com granilite e marcenaria sob medida" loading="lazy">
           </figure>
         </div>
       </div>
@@ -102,20 +101,11 @@
           <h2>Interiores RW Mamedio em diferentes segmentos</h2>
           <p>Combinamos arquitetura, design e engenharia para entregar espaços inspiradores, eficientes e fáceis de manter.</p>
         </header>
-        <div class="gallery-grid">
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_5.jpeg" alt="Interiores corporativos com recepção granilite" loading="lazy">
-            <figcaption>Recepção corporativa com granilite, iluminação cênica e marca aplicada.</figcaption>
-          </figure>
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_6.jpeg" alt="Espaço comercial com interiores personalizados" loading="lazy">
-            <figcaption>Espaço comercial com experiência imersiva e acabamentos high-end.</figcaption>
-          </figure>
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_8.jpeg" alt="Sala de reunião moderna com acabamentos RW" loading="lazy">
-            <figcaption>Sala de reunião com soluções acústicas e tecnologia integrada.</figcaption>
-          </figure>
-        </div>
+        <ul class="benefits-list">
+          <li><strong>Recepções corporativas:</strong> design com materiais nobres, iluminação cênica e branding aplicado.</li>
+          <li><strong>Ambientes de trabalho:</strong> ergonomia, acústica e layout fluido para performance das equipes.</li>
+          <li><strong>Interiores residenciais:</strong> integração de marcenaria, iluminação e acabamentos sob medida.</li>
+        </ul>
       </div>
     </section>
 
