--- a/paisagismo/index.html
+++ b/paisagismo/index.html
@@ -89,8 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_3.jpeg" alt="Projeto paisagístico integrado a pisos granilite" loading="lazy">
-            <figcaption>Jardim corporativo com paisagismo e pisos monolíticos.</figcaption>
+            <img src="./img/paisagem.png" alt="Projeto paisagístico integrado a ambientes corporativos" loading="lazy">
           </figure>
         </div>
       </div>
@@ -103,20 +102,11 @@
           <h2>Paisagismo RW Mamedio</h2>
           <p>Integramos vegetação, mobiliário urbano e iluminação para criar experiências memoráveis em áreas externas e internas.</p>
         </header>
-        <div class="gallery-grid">
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_11.jpeg" alt="Jardim interno com vegetação tropical" loading="lazy">
-            <figcaption>Jardim interno com vegetação tropical e iluminação indireta.</figcaption>
-          </figure>
-          <figure>
-            <img src="../assets/img/pisos_granilite/jobb_3.jpeg" alt="Praça corporativa com paisagismo" loading="lazy">
-            <figcaption>Praça corporativa com estrutura metálica e canteiros elevados.</figcaption>
-          </figure>
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_14.jpeg" alt="Cobertura com paisagismo integrado" loading="lazy">
-            <figcaption>Cobertura com paisagismo integrado e vistas panorâmicas.</figcaption>
-          </figure>
-        </div>
+        <ul class="benefits-list">
+          <li><strong>Jardins internos e externos:</strong> soluções biofílicas adaptadas a cada microclima.</li>
+          <li><strong>Canteiros, iluminação e mobiliário:</strong> integração estética e funcional dos espaços.</li>
+          <li><strong>Programação visual do verde:</strong> cores, texturas e floradas alinhadas à identidade do projeto.</li>
+        </ul>
       </div>
     </section>
 
