--- a/regularizacao-imoveis/index.html
+++ b/regularizacao-imoveis/index.html
@@ -89,8 +89,8 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_1.jpeg" alt="Equipe analisando documentação de imóveis" loading="lazy">
-            <figcaption>Equipe RW revisando documentação e plantas legais.</figcaption>
+            <img src="./img/contratos.png" alt="Equipe revisando contratos e documentação imobiliária" loading="lazy">
+            <figcaption>Assinatura e conferência de contratos e registros imobiliários.</figcaption>
           </figure>
         </div>
       </div>
@@ -103,20 +103,11 @@
           <h2>Regularização completa com governança</h2>
           <p>Consolidamos toda a jornada de legalização com transparência e indicadores para gestores, facilities e departamentos jurídicos.</p>
         </header>
-        <div class="gallery-grid">
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_9.jpeg" alt="Equipe RW Mamedio em reunião com gestores de facilities" loading="lazy">
-            <figcaption>Reuniões executivas com atualização de status e próximos passos.</figcaption>
-          </figure>
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_10.jpeg" alt="Mapeamento de documentação e plantas" loading="lazy">
-            <figcaption>Mapeamento de desenhos, registros e licenças existentes.</figcaption>
-          </figure>
-          <figure>
-            <img src="../assets/img/pisos_granilite/job_12.jpeg" alt="Entrega de dossiê final de regularização" loading="lazy">
-            <figcaption>Entrega de dossiê consolidado com todos os protocolos e pareceres.</figcaption>
-          </figure>
-        </div>
+        <ul class="benefits-list">
+          <li><strong>Reuniões executivas:</strong> alinhamento com gestores, definição de prazos e próximos passos.</li>
+          <li><strong>Mapeamento documental:</strong> levantamento de plantas, registros, licenças e pendências em cartórios e prefeituras.</li>
+          <li><strong>Dossiê de regularização:</strong> consolidação de protocolos, pareceres e comprovantes para entrega final.</li>
+        </ul>
       </div>
     </section>
 
