--- a/projetos-arquitetonicos/index.html
+++ b/projetos-arquitetonicos/index.html
@@ -89,8 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="img/projeto_central.png" alt="Imagem ilustrativa de projeto arquitetônico em perspectiva" loading="lazy">
-            <figcaption>Imagem ilustrativa em perspectiva de edifício corporativo.</figcaption>
+            <img src="img/projeto_central.png?v=1" alt="Imagem ilustrativa de projeto arquitetônico em perspectiva">
           </figure>
         </div>
       </div>
