mudancas rota das imgs

--- a/acompanhamento-obra/index.html
+++ b/acompanhamento-obra/index.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -89,7 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_8.jpeg" alt="Engenheira RW Mamedio fiscalizando obra" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_8.jpeg" alt="Engenheira RW Mamedio fiscalizando obra" loading="lazy">
             <figcaption>Engenheiros RW acompanhando atividades em campo.</figcaption>
           </figure>
         </div>
@@ -105,15 +105,15 @@
         </header>
         <div class="gallery-grid">
           <figure>
-            <img src="../assets/img/pisos_granilite/job_12.jpeg" alt="Fiscalização em retrofit corporativo" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_12.jpeg" alt="Fiscalização em retrofit corporativo" loading="lazy">
             <figcaption>Retrofit corporativo com controle Lean e entregas por etapas.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_7.jpeg" alt="Acompanhamento de canteiro industrial" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_7.jpeg" alt="Acompanhamento de canteiro industrial" loading="lazy">
             <figcaption>Canteiro industrial com monitoramento de segurança e produção.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_10.jpeg" alt="Controle técnico em obra institucional" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_10.jpeg" alt="Controle técnico em obra institucional" loading="lazy">
             <figcaption>Obra institucional com relatórios executivos e visitas semanais.</figcaption>
           </figure>
         </div>
