--- a/ilustracoes-digitais/index.html
+++ b/ilustracoes-digitais/index.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -89,7 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_5.jpeg" alt="Render de interiores criado pela RW Mamedio" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_5.jpeg" alt="Render de interiores criado pela RW Mamedio" loading="lazy">
             <figcaption>Render RW para apresentação de interiores corporativos.</figcaption>
           </figure>
         </div>
@@ -105,15 +105,15 @@
         </header>
         <div class="gallery-grid">
           <figure>
-            <img src="../assets/img/pisos_granilite/job_6.jpeg" alt="Render comercial criado pela RW Mamedio" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_6.jpeg" alt="Render comercial criado pela RW Mamedio" loading="lazy">
             <figcaption>Loja conceito renderizada com destaque para iluminação e materiais.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_8.jpeg" alt="Render corporativo de espaço colaborativo" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_8.jpeg" alt="Render corporativo de espaço colaborativo" loading="lazy">
             <figcaption>Espaço colaborativo com mobiliário planejado e acabamento granilite.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_7.jpeg" alt="Render externo de empreendimento" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_7.jpeg" alt="Render externo de empreendimento" loading="lazy">
             <figcaption>Render externo com simulação de paisagismo e público alvo.</figcaption>
           </figure>
         </div>
