--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="/" aria-label="RW Mamedio - início">
-        <img src="assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -97,7 +97,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="projetos-arquitetonicos/img/projeto_central.png" alt="Equipe RW Mamedio apresentando projeto arquitetônico" loading="lazy">
+                  <img src="/projetos-arquitetonicos/img/projeto_central.png" alt="Equipe RW Mamedio apresentando projeto arquitetônico" loading="lazy">
                   <figcaption>Modelagem BIM com integração multidisciplinar.</figcaption>
                 </figure>
               </div>
@@ -121,7 +121,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="construcao-reforma/img/reforma.jpeg" alt="Equipe RW Mamedio executando obra corporativa" loading="lazy">
+                  <img src="/construcao-reforma/img/reforma.jpeg" alt="Equipe RW Mamedio executando obra corporativa" loading="lazy">
                   <figcaption>Obra RW com logística e segurança monitoradas.</figcaption>
                 </figure>
               </div>
@@ -145,7 +145,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="piso-granilite/img/job_14.jpeg?v=1" alt="Piso granilite executado pela RW Mamedio" loading="lazy">
+                  <img src="/piso-granilite/img/job_14.jpeg?v=1" alt="Piso granilite executado pela RW Mamedio" loading="lazy">
                   <figcaption>Granilite vermelho com inserções metálicas premium.</figcaption>
                 </figure>
               </div>
@@ -169,7 +169,7 @@
               </div>
               <div class="hero__media" role="presentation">
                 <figure class="hero__figure">
-                  <img src="regularizacao-imoveis/img/contratos.png" alt="Equipe RW Mamedio revisando contratos e documentação imobiliária" loading="lazy">
+                  <img src="/regularizacao-imoveis/img/contratos.png" alt="Equipe RW Mamedio revisando contratos e documentação imobiliária" loading="lazy">
                   <figcaption>Revisão de contratos, licenças e protocolos para regularização.</figcaption>
                 </figure>
               </div>
@@ -308,13 +308,13 @@
     <section id="sobre" class="section">
       <div class="container about">
         <div class="about__content">
-          <span class="section__eyebrow">Quem somos</span>
-          <h2>RW Mamedio: engenharia integrada desde 1998</h2>
-          <p>Reunimos arquitetos, engenheiros, designers de interiores, paisagistas e especialistas em legalização para conduzir projetos do conceito à operação. Com sede em São Paulo e atuação nacional, entregamos soluções personalizadas com governança e transparência.</p>
+          <span class="section__eyebrow">Quem Somos</span>
+          <h2>RW Mamedio Construções & Reformas</h2>
+          <p>A RW Mamedio Construções & Reformas integra arquitetura, engenharia, interiores, paisagismo e regularização imobiliária para entregar projetos completos, do conceito à operação. Aplicamos Metodologia Lean, ferramentas BIM e gestão digital para garantir precisão, eficiência e conformidade. Oferecemos acompanhamento técnico, auditorias, suporte jurídico e planos de manutenção para assegurar qualidade e longevidade em cada obra.</p>
           <ul class="about__list">
-            <li>Metodologia Lean aliada a ferramentas BIM e gestão digital.</li>
-            <li>Controle de riscos regulatórios e acompanhamento jurídico.</li>
-            <li>Planos de manutenção e suporte contínuo após a entrega.</li>
+            <li>Metodologia Lean, BIM e gestão digital aplicadas em todas as etapas.</li>
+            <li>Acompanhamento técnico, auditorias e suporte jurídico contínuo.</li>
+            <li>Planos de manutenção e longevidade para cada entrega.</li>
           </ul>
         </div>
         <aside class="about__highlight">
