--- a/piso-epoxi/index.html
+++ b/piso-epoxi/index.html
@@ -49,7 +49,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -94,7 +94,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_9.jpeg" alt="Aplicação de piso epóxi em ambiente corporativo" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_9.jpeg" alt="Aplicação de piso epóxi em ambiente corporativo" loading="lazy">
             <figcaption>Piso epóxi autonivelante com demarcação verde RW.</figcaption>
           </figure>
         </div>
@@ -110,27 +110,27 @@
         </header>
         <div class="gallery-grid">
           <figure>
-            <img src="../assets/img/pisos_granilite/job_7.jpeg" alt="Indústria com piso epóxi vermiculado" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_7.jpeg" alt="Indústria com piso epóxi vermiculado" loading="lazy">
             <figcaption>Indústria alimentícia com epóxi antiderrapante e canaletas sanitárias.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/jobb_3.jpeg" alt="Galpão industrial com piso epóxi cinza" loading="lazy">
+            <img src="/assets/img/pisos_granilite/jobb_3.jpeg" alt="Galpão industrial com piso epóxi cinza" loading="lazy">
             <figcaption>Galpão com epóxi cinza, juntas tratadas e demarcação operacional.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_13.jpeg" alt="Estacionamento com piso epóxi colorido" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_13.jpeg" alt="Estacionamento com piso epóxi colorido" loading="lazy">
             <figcaption>Estacionamento corporativo com epóxi colorido e sinalização fotoluminescente.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_14.jpeg" alt="Centro logístico com piso epóxi preto" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_14.jpeg" alt="Centro logístico com piso epóxi preto" loading="lazy">
             <figcaption>Centro logístico com epóxi de alta resistência e fluxo intenso.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_10.jpeg" alt="Hospital com piso epóxi autonivelante" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_10.jpeg" alt="Hospital com piso epóxi autonivelante" loading="lazy">
             <figcaption>Hospital com epóxi autonivelante e rodapé abaulado para assepsia.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_6.jpeg" alt="Área comercial com piso epóxi brilhante" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_6.jpeg" alt="Área comercial com piso epóxi brilhante" loading="lazy">
             <figcaption>Área comercial com epóxi high-gloss e proteção UV.</figcaption>
           </figure>
         </div>
