--- a/piso-granilite/index.html
+++ b/piso-granilite/index.html
@@ -49,7 +49,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -94,7 +94,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/job_8.jpeg" alt="Aplicação de piso granilite preto pela RW Mamedio" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_8.jpeg" alt="Aplicação de piso granilite preto pela RW Mamedio" loading="lazy">
           </figure>
         </div>
       </div>
@@ -108,22 +108,22 @@
         </header>
         <div class="gallery-grid">
           <figure>
-            <img src="../assets/img/pisos_granilite/job_1.jpeg" alt="Hall corporativo com piso granilite cinza executado pela RW Mamedio" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_1.jpeg" alt="Hall corporativo com piso granilite cinza executado pela RW Mamedio" loading="lazy">
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_2.jpeg" alt="Área residencial com piso granilite claro" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_2.jpeg" alt="Área residencial com piso granilite claro" loading="lazy">
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_5.jpeg" alt="Recepção de clínica com piso granilite bege" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_5.jpeg" alt="Recepção de clínica com piso granilite bege" loading="lazy">
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_6.jpeg" alt="Loja conceito com piso granilite grafite" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_6.jpeg" alt="Loja conceito com piso granilite grafite" loading="lazy">
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_10.jpeg" alt="Auditório com piso granilite escuro" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_10.jpeg" alt="Auditório com piso granilite escuro" loading="lazy">
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_12.jpeg" alt="Centro gastronômico com piso granilite café" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_12.jpeg" alt="Centro gastronômico com piso granilite café" loading="lazy">
           </figure>
         </div>
       </div>
