--- a/projetos-arquitetonicos/index.html
+++ b/projetos-arquitetonicos/index.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -89,7 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="img/projeto_central.png?v=1" alt="Imagem ilustrativa de projeto arquitetônico em perspectiva">
+            <img src="/projetos-arquitetonicos/img/projeto_central.png?v=1" alt="Imagem ilustrativa de projeto arquitetônico em perspectiva">
           </figure>
         </div>
       </div>
@@ -104,15 +104,15 @@
         </header>
         <div class="gallery-grid">
           <figure>
-            <img src="img/projeto1.png" alt="Projeto arquitetônico corporativo com layout aberto" loading="lazy">
+            <img src="/projetos-arquitetonicos/img/projeto1.png" alt="Projeto arquitetônico corporativo com layout aberto" loading="lazy">
             <figcaption>Arquitetura corporativa com layout aberto, integração de equipes e circulação fluida.</figcaption>
           </figure>
           <figure>
-            <img src="img/projeto2.png" alt="Projeto arquitetônico institucional" loading="lazy">
+            <img src="/projetos-arquitetonicos/img/projeto2.png" alt="Projeto arquitetônico institucional" loading="lazy">
             <figcaption>Arquitetura institucional com foco em conforto térmico, acústico e eficiência operacional.</figcaption>
           </figure>
           <figure>
-            <img src="img/projeto3.png" alt="Projeto arquitetônico residencial de alto padrão" loading="lazy">
+            <img src="/projetos-arquitetonicos/img/projeto3.png" alt="Projeto arquitetônico residencial de alto padrão" loading="lazy">
             <figcaption>Arquitetura residencial de alto padrão integrada a interiores, iluminação e paisagismo.</figcaption>
           </figure>
         </div>
