--- a/regularizacao-imoveis/index.html
+++ b/regularizacao-imoveis/index.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -89,7 +89,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="./img/contratos.png" alt="Equipe revisando contratos e documentação imobiliária" loading="lazy">
+            <img src="/regularizacao-imoveis/img/contratos.png" alt="Equipe revisando contratos e documentação imobiliária" loading="lazy">
             <figcaption>Assinatura e conferência de contratos e registros imobiliários.</figcaption>
           </figure>
         </div>
