--- a/restauracao-granilite/index.html
+++ b/restauracao-granilite/index.html
@@ -49,7 +49,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -94,7 +94,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="../assets/img/pisos_granilite/jobb_4.jpeg" alt="Restauração de piso granilite com polimento profissional" loading="lazy">
+            <img src="/assets/img/pisos_granilite/jobb_4.jpeg" alt="Restauração de piso granilite com polimento profissional" loading="lazy">
             <figcaption>Processo de polimento em restauração de granilite.</figcaption>
           </figure>
         </div>
@@ -110,27 +110,27 @@
         </header>
         <div class="gallery-grid">
           <figure>
-            <img src="../assets/img/pisos_granilite/job_2.jpeg" alt="Antes e depois de piso granilite em área residencial" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_2.jpeg" alt="Antes e depois de piso granilite em área residencial" loading="lazy">
             <figcaption>Residencial: restauração completa e aplicação de selante cristalizador.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_10.jpeg" alt="Restauração de piso granilite em corredor corporativo" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_10.jpeg" alt="Restauração de piso granilite em corredor corporativo" loading="lazy">
             <figcaption>Corredor corporativo com granilite recuperado e juntas refeitas.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_11.jpeg" alt="Granilite restaurado em galeria de arte" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_11.jpeg" alt="Granilite restaurado em galeria de arte" loading="lazy">
             <figcaption>Galeria de arte com granilite restaurado e brilho acetinado.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_12.jpeg" alt="Restauração de granilite em espaço gastronômico" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_12.jpeg" alt="Restauração de granilite em espaço gastronômico" loading="lazy">
             <figcaption>Espaço gastronômico com recuperação estrutural e proteção anti-manchas.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_5.jpeg" alt="Restauração de granilite em clínica" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_5.jpeg" alt="Restauração de granilite em clínica" loading="lazy">
             <figcaption>Clínica médica: nivelamento, polimento e inserções revitalizadas.</figcaption>
           </figure>
           <figure>
-            <img src="../assets/img/pisos_granilite/job_1.jpeg" alt="Piso granilite restaurado em hall corporativo" loading="lazy">
+            <img src="/assets/img/pisos_granilite/job_1.jpeg" alt="Piso granilite restaurado em hall corporativo" loading="lazy">
             <figcaption>Hall corporativo: restauração com cristalização de alto brilho.</figcaption>
           </figure>
         </div>
