--- a/interiores/index.html
+++ b/interiores/index.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <div class="container site-header__row">
       <a class="brand" href="../" aria-label="RW Mamedio - início">
-        <img src="../assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
+        <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
           <small>Construções e Reformas</small>
@@ -88,7 +88,7 @@
         </div>
         <div class="hero__media" role="presentation">
           <figure class="hero__figure">
-            <img src="./img/job_9.jpeg" alt="Projeto de interiores RW Mamedio com granilite e marcenaria sob medida" loading="lazy">
+            <img src="/interiores/img/job_9.jpeg" alt="Projeto de interiores RW Mamedio com granilite e marcenaria sob medida" loading="lazy">
           </figure>
         </div>
       </div>
